Fixed cache error when using "toList" function